make a list of games, held in state

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "jsx": "react-jsx",
       "baseUrl": ".",
+      "strict": false,
       "paths": {
         "@components/*": ["src/components/*"],
         "@utils/*": ["src/utils/*"]
